feat: 添加资料锁功能
